#
# Makefile.am --
#
#      Template to generate the toplevel Makefile.in using automake.
#
# Copyright (c) 2004 Juergen Schoenwaelder, International University Bremen.
#
# See the file "COPYING" for information on usage and redistribution
# of this file, and for a DISCLAIMER OF ALL WARRANTIES.
#
# @(#) $Id: Makefile.am 1670 2004-08-09 14:06:04Z strauss $
#

AUTOMAKE_OPTIONS        = no-dependencies foreign

SUBDIRS			= src doc test
